--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>geki map</title>
     <style>body{margin:0}</style>
+    <script type="module" src="/src/main.js" defer></script>
   </head>
   <body>
 		<h3 id="loading">Loading...</h3>
-    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
